Updated changelog, readme, version to 1.4.2. release!

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -26,7 +26,14 @@
 
 	server.db.all
 	db.layout.all
-	layout.script
+	db.script.all
+	
+	Note: the "#all" method returns object names (as keys) only. The receiver of the method maintains the full object collection.
+	
+	Example:
+	
+		server.db.all #=> ['dbname1', 'dbname2', ...]
+		server.db     #=> a DbFactory object (descendant of Hash), containing 0 or more Database objects
 
 *Lardawge-Rfm 1.4.2 (unreleased)*
   
