--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,14 @@
-*Ginjo-Rfm 1.5.0.pre
+*Ginjo-Rfm 2.0.0.pre
 
   Alternative XML parsers using ActiveSupport::XmlMini interface.
   
-  ActiveModel compatibility
+  ActiveModel compatibility allows Rails-like models
+  
+  Complex queries with Layout#query method
+  
+  Configuration API manages settings of multiple server/db/layout/etc setups
+  
+  Full Filemaker metadata support
 
 *Ginjo-Rfm 1.4.3
 
